# applyeasy

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/src/analysis/: evidence_extractor.py  job_description_analyzer.py
backend/src/api/: main.py
backend/src/api/routes/: download.py  generate.py  status.py  upload.py
backend/src/extraction/: candidate_profile_builder.py
backend/src/generation/: cover_letter_generator.py  resume_tailoring_engine.py
backend/src/ingestion/: document_ingestion_engine.py
backend/src/matching/: relevance_ranker.py
backend/src/models/: schemas.py
backend/src/pipeline/: orchestrator.py
backend/src/rendering/: pdf_renderer.py
backend/src/storage/: database.py
backend/src/validation/: quality_validator.py
backend/templates/cover_letter/: base.css  base.html
backend/templates/resume/: base.css  base.html  classic.css  polished.css  traditional.css
backend/tests/: test_evidence.py  test_extraction.py  test_ingestion.py  test_tailoring.py
backend/tests/fixtures/: sample_jd.txt  sample_profile.txt
frontend/: index.html  package-lock.json  package.json
scripts/: generate_gallery.py
test_jobs/: 01_software_engineer_backend.txt  02_data_scientist_healthcare.txt  03_investment_banking_analyst.txt  04_mechanical_engineer_product.txt  05_marketing_growth.txt  06_biotech_research_associate.txt  07_supply_chain_analyst.txt  08_product_designer.txt  09_ml_engineer.txt  10_consulting_analyst.txt  11_civil_engineer.txt  12_accounting_audit.txt  13_product_manager.txt  (+7 more)
(+103 files in other folders)
